small letter index.html

--- a/pages/header/about.html
+++ b/pages/header/about.html
@@ -10,7 +10,7 @@
         
     <div id="header" style="text-align: center;">
         <h1>About Page</h1>
-        <section><a href="../../Index.html" class="link">Home</a></section>
+        <section><a href="../../index.html" class="link">Home</a></section>
 
 
     </div>
